--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <h1>About me</h1>
-<p>My name is Ameer Mourad I am a younf developer from iraq i am 20 years old of age and i am still learning to be better everyday</p>
+<p>My name is Ameer Mourad I am a young developer from iraq i am 20 years old of age and i am still learning to be better everyday</p>
 <p>Not really much to say i am hard-working and ready for the challenges ahead</p>
 
 
-<h3>Thnaks for your time *-*</h3>
+<h3>Thanks for your time *-*</h3>
